Fixed margin errors with projects on mobile

--- a/src/MLGame.css
+++ b/src/MLGame.css
@@ -283,7 +283,7 @@
     .ml-game {
         max-width: 100%;
         padding: 15px;
-        margin-left: -20px;
+        margin-left: 0px;
     }
 
     .ml-game-grid {
